--- a/Sources/mapeditorform.ui
+++ b/Sources/mapeditorform.ui
@@ -11,21 +11,8 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Map Editor</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>201</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>This is MapEditor</string>
-   </property>
-  </widget>
   <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
@@ -36,17 +23,14 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="imageLabel">
+  <widget class="QGraphicsView" name="graphicsView">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>90</y>
-     <width>171</width>
-     <height>191</height>
+     <x>280</x>
+     <y>70</y>
+     <width>256</width>
+     <height>281</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
