--- a/Sources/mapeditorform.ui
+++ b/Sources/mapeditorform.ui
@@ -164,6 +164,19 @@
          <string>Selection</string>
         </property>
        </widget>
+       <widget class="QLabel" name="cursor_label">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>40</y>
+          <width>91</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> </string>
+        </property>
+       </widget>
       </widget>
      </item>
      <item>
