--- a/Sources/mapeditorform.ui
+++ b/Sources/mapeditorform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>696</width>
-    <height>486</height>
+    <width>819</width>
+    <height>518</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -174,7 +174,7 @@
          </rect>
         </property>
         <property name="text">
-         <string> </string>
+         <string/>
         </property>
        </widget>
       </widget>
@@ -183,7 +183,7 @@
       <widget class="QWidget" name="widget" native="true">
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
-         <widget class="QSplitter" name="splitter_2">
+         <widget class="QSplitter" name="splitter_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -202,6 +202,13 @@
            <widget class="QListWidget" name="listWidgetTurf"/>
           </widget>
           <widget class="QGraphicsView" name="graphicsView"/>
+          <widget class="QSplitter" name="splitter_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <widget class="QListWidget" name="listWidgetTile"/>
+           <widget class="QListWidget" name="listWidgetVariables"/>
+          </widget>
          </widget>
         </item>
        </layout>
