--- a/Sources/Qt/mainform.ui
+++ b/Sources/Qt/mainform.ui
@@ -78,6 +78,11 @@ stop:0.6 rgba(255, 255, 255, 0));
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>13</pointsize>
+      </font>
+     </property>
     </widget>
    </widget>
   </widget>
