--- a/Sources/representation/qt/mainform.ui
+++ b/Sources/representation/qt/mainform.ui
@@ -97,7 +97,7 @@ stop:0.6 rgba(255, 255, 255, 0));
   <customwidget>
    <class>GamingLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>gaminglineedit.h</header>
+   <header>Gaminglineedit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
