--- a/Sources/representation/qt/mainform.ui
+++ b/Sources/representation/qt/mainform.ui
@@ -72,27 +72,16 @@ stop:0.6 rgba(255, 255, 255, 0));
        <height>511</height>
       </rect>
      </property>
-     <property name="styleSheet">
-      <string notr="true">QSplitter::handle {
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, 
-stop:0 rgba(255, 255, 255, 0), 
-stop:0.407273 rgba(200, 200, 200, 255), 
-stop:0.4825 rgba(101, 104, 113, 235), 
-stop:0.6 rgba(255, 255, 255, 0));
-}</string>
-     </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Tab 1</string>
-       </attribute>
-      </widget>
-      <widget class="QWidget" name="tab_2">
-       <attribute name="title">
-        <string>Tab 2</string>
+        <string>Main</string>
        </attribute>
       </widget>
      </widget>
