--- a/Launcher/launcherform.ui
+++ b/Launcher/launcherform.ui
@@ -34,9 +34,9 @@
   <widget class="QPushButton" name="exitButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>254</x>
      <y>210</y>
-     <width>75</width>
+     <width>71</width>
      <height>31</height>
     </rect>
    </property>
@@ -83,9 +83,9 @@
   <widget class="QPushButton" name="connectPushButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>150</y>
-     <width>75</width>
+     <x>254</x>
+     <y>160</y>
+     <width>71</width>
      <height>31</height>
     </rect>
    </property>
@@ -96,9 +96,9 @@
   <widget class="QPushButton" name="hidePushButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>180</x>
      <y>210</y>
-     <width>75</width>
+     <width>71</width>
      <height>31</height>
     </rect>
    </property>
@@ -154,6 +154,14 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
   <widget class="QLineEdit" name="passwordLineEdit">
    <property name="enabled">
@@ -172,6 +180,14 @@
      <width>16777215</width>
      <height>16777215</height>
     </size>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::Password</enum>
@@ -243,6 +259,42 @@
    </property>
    <property name="text">
     <string>Local?</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="customArgsLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>160</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="customArgsLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>140</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Custom arguments</string>
    </property>
   </widget>
  </widget>
