--- a/Sources/representation/qt/mainform.ui
+++ b/Sources/representation/qt/mainform.ui
@@ -68,8 +68,8 @@ stop:0.6 rgba(255, 255, 255, 0));
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>381</width>
-       <height>511</height>
+       <width>280</width>
+       <height>429</height>
       </rect>
      </property>
      <property name="orientation">
@@ -77,7 +77,7 @@ stop:0.6 rgba(255, 255, 255, 0));
      </property>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -86,6 +86,16 @@ stop:0.6 rgba(255, 255, 255, 0));
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
          <widget class="QTextBrowser" name="mainTabTextBrowser"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabPerfomance">
+       <attribute name="title">
+        <string>Performance</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QTextBrowser" name="performanceTextBrowser"/>
         </item>
        </layout>
       </widget>
