--- a/sources/representation/qt/mapeditorform.ui
+++ b/sources/representation/qt/mapeditorform.ui
@@ -223,7 +223,7 @@
            <widget class="QListWidget" name="listWidgetVariables"/>
            <widget class="QTabWidget" name="tabWidgetVariables">
             <property name="currentIndex">
-             <number>1</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="tabRaw">
              <attribute name="title">
@@ -245,6 +245,21 @@
               <string>As String</string>
              </attribute>
              <widget class="QLineEdit" name="lineEditAsString">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>10</y>
+                <width>113</width>
+                <height>20</height>
+               </rect>
+              </property>
+             </widget>
+            </widget>
+            <widget class="QWidget" name="tabInt">
+             <attribute name="title">
+              <string>As Int</string>
+             </attribute>
+             <widget class="QLineEdit" name="lineEditAsInt">
               <property name="geometry">
                <rect>
                 <x>10</x>
