--- a/sources/client/representation/qt/mapeditorform.ui
+++ b/sources/client/representation/qt/mapeditorform.ui
@@ -190,6 +190,19 @@
          <string>Load Json</string>
         </property>
        </widget>
+       <widget class="QLabel" name="current_variable_type_label">
+        <property name="geometry">
+         <rect>
+          <x>550</x>
+          <y>10</y>
+          <width>181</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Current type:</string>
+        </property>
+       </widget>
       </widget>
      </item>
      <item>
