--- a/sources/client/representation/qt/mapeditorform.ui
+++ b/sources/client/representation/qt/mapeditorform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>819</width>
-    <height>619</height>
+    <width>1076</width>
+    <height>662</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -222,6 +222,18 @@
            <widget class="QListWidget" name="listWidgetTile"/>
            <widget class="QListWidget" name="listWidgetVariables"/>
            <widget class="QFrame" name="frame">
+            <property name="minimumSize">
+             <size>
+              <width>300</width>
+              <height>80</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>300</width>
+              <height>80</height>
+             </size>
+            </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -231,7 +243,7 @@
             <widget class="QLabel" name="current_variable_type_label">
              <property name="geometry">
               <rect>
-               <x>0</x>
+               <x>10</x>
                <y>0</y>
                <width>181</width>
                <height>31</height>
@@ -240,6 +252,77 @@
              <property name="text">
               <string>Current type:</string>
              </property>
+            </widget>
+            <widget class="QWidget" name="">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>30</y>
+               <width>366</width>
+               <height>30</height>
+              </rect>
+             </property>
+             <layout class="QHBoxLayout" name="horizontalLayout">
+              <item>
+               <widget class="QSpinBox" name="int32_spin_box"/>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="string_line_edit"/>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="bool_check_box">
+                <property name="text">
+                 <string>True</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="unsupported_label">
+                <property name="text">
+                 <string>Unsupported</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="set_value_push_button">
+                <property name="maximumSize">
+                 <size>
+                  <width>40</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Set</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="unset_value_push_button">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Unset</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+             </layout>
             </widget>
            </widget>
           </widget>
